# sfml-game-engine

./: CMakeLists.txt
dependencies/: CMakeLists.txt
dependencies/sfml/: CMakeLists.txt
src/: CMakeLists.txt  Cultist.cpp  Cultist.h  Game.cpp  Game.h  Object.h  Player.cpp  Player.h  imgui.ini  main.cpp
src/engine/: Action.cpp  Action.h  ActionHandler.cpp  ActionHandler.h  AnimatedSprite.cpp  AnimatedSprite.h  Animation.cpp  Animation.h  Background.cpp  Background.h  Camera.cpp  Camera.h  Configuration.cpp  Configuration.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  LevelManager.cpp  LevelManager.h  ResourceManager.h
src/gui/: Gui.h
